make sure it doesnt overlap toolbar

--- a/_app/css/toolbar.sass
+++ b/_app/css/toolbar.sass
@@ -20,11 +20,12 @@ div[ui-view="toolbar"]
   position: relative
 md-progress-linear#loading
   .md-container.md-mode-indeterminate
+    height: 2px
     background-color: transparent
   position: absolute
   width: 100%
-  z-index: $toolbar-z-index + 1
-  bottom: 0
+  z-index: $toolbar-z-index + 100
+  bottom: -2px
   height: 2px
 
 md-toolbar
