--- a/app/css/compiled/application.css
+++ b/app/css/compiled/application.css
@@ -9187,10 +9187,11 @@ div[ui-view="toolbar"] {
 md-progress-linear#loading {
   position: absolute;
   width: 100%;
-  z-index: 20;
-  bottom: 0;
+  z-index: 119;
+  bottom: -2px;
   height: 2px; }
   md-progress-linear#loading .md-container.md-mode-indeterminate {
+    height: 2px;
     background-color: transparent; }
 
 md-toolbar#main-toolbar {
